tests/baselines/reference/unusedVariablesinBlocks1.errors.txt
tests/cases/compiler/unusedVariablesinBlocks1.ts(2,9): error TS6133: 'x' is declared but never used.


==== tests/cases/compiler/unusedVariablesinBlocks1.ts (1 errors) ====
    function f1 () {
        let x = 10;
            ~
!!! error TS6133: 'x' is declared but never used.
        {
            let x = 11;
            x++;
        }
    }